Hacky fix for overlapping tweet within modal

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -229,6 +229,7 @@ body {
                     clear: right;
                     border-bottom: 0;
                     height: 150px;
+                    margin-left: 0.5px;
                     background-color: yellow;
                     grid-template-columns: 25% auto;
 
